...
                app:title="@string/app_name"
                app:titleTextColor="@color/white" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/usersRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <FrameLayout
            android:id="@+id/loagingLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/loading_background"
            android:visibility="@{ viewModel.isLoading ? View.VISIBLE : View.GONE, default = gone }">

            <ProgressBar
...
