<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item_users_filter"
        android:icon="@drawable/ic_sort"
        android:title="@string/order_by_rank"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_item_users_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
</menu>