...
            type="io.github.messiaslima.codewars.ui.user.UserViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/userDetailLayout"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/userAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
